<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#332424"
    tools:context=".WeatherScreens.UserTypedLocation">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:stretchColumns="*">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/txt_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/place"
                android:textAppearance="@style/MyTextAppearance" />

            <TextView
                android:id="@+id/forecastPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MyTextAppearance" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/Date"
                android:textAppearance="@style/MyTextAppearance" />

            <TextView
                android:id="@+id/valueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MyTextAppearance" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/Time"
                android:textAppearance="@style/MyTextAppearance" />

            <TextView
                android:id="@+id/valueTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MyTextAppearance" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/Temp"
                android:textAppearance="@style/MyTextAppearance" />

            <TextView
                android:id="@+id/forecastTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MyTextAppearance" />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/windSpeed"
                android:textAppearance="@style/MyTextAppearance" />

            <TextView
                android:id="@+id/valueWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MyTextAppearance" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/pressure"
                android:textAppearance="@style/MyTextAppearance" />

            <TextView
                android:id="@+id/valuePressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MyTextAppearance" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_cloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/cloudCover"
                android:textAppearance="@style/MyTextAppearance" />

            <TextView
                android:id="@+id/valueCloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MyTextAppearance" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/humidity"
                android:textAppearance="@style/MyTextAppearance" />

            <TextView
                android:id="@+id/valueHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MyTextAppearance" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/sunrise"
                android:textAppearance="@style/MyTextAppearance" />

            <TextView
                android:id="@+id/valueSunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MyTextAppearance" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/txt_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/sunset"
                android:textAppearance="@style/MyTextAppearance" />

            <TextView
                android:id="@+id/valueSunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MyTextAppearance" />
        </TableRow>

    </TableLayout>

</FrameLayout>